Downloading, Login Auth

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect": "^3.6.6",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "mysql": "^2.16.0",
     "nodemon": "^1.18.8",
     "shelljs": "^0.8.3"
   }
