--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "concat-files": "^0.1.1",
     "connect": "^3.6.6",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
